Bug 96070 - Vertical ruler has no number with openGL enabled
Summary: Vertical ruler has no number with openGL enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha1
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0.1 target:5.0.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-11-25 17:44 UTC by Laurent Balland
Modified: 2016-10-25 19:08 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison of vertical rulers (master with 5.0.3.2) (9.71 KB, image/png)
2015-11-25 17:44 UTC, Laurent Balland
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2015-11-25 17:44:50 UTC
Created attachment 120796 [details]
Comparison of vertical rulers (master with 5.0.3.2)

Description: Vertical ruler shows its ticks but no number between ticks.

Step to reproduce:
1. Create a new document
2. View > Rulers > Vertical Ruler

Actual behavior:
Vertical ruler only shows ticks.

Expected behavior:
Numbers between main ticks are missing

Reproduce with:
- Version: 5.1.0.0.alpha1+
Build ID: 229583f298b9de05e1ad1727e233d597995099e3-GL
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-22_23:09:05
Locale: fr-FR (fr_FR)

Not reproduce with:
- Version: 5.0.3.2
Build ID: e5f16313668ac592c1bfb310f4390624e3dbfb75
Locale : fr-FR (fr_FR)

See attached screen shots for comparison of ruler
Comment 1 Cor Nouws 2015-11-25 19:39:43 UTC
Not a problem in Version: 5.1.0.0.alpha1+
Build ID: f6bc5b79c31225c02e9500d0ced4bd26f998f82b
Threads 2; Ver: 4.2; Render: default; 

TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:master, Time: 2015-11-24_01:06:34
Locale: nl-NL (nl_NL.UTF-8)
Comment 2 V Stuart Foote 2015-11-25 21:19:59 UTC
On Windows 8.1 Ent 64-bit (en-US) with
Version: 5.0.3.2 (x64)
Build ID: e5f16313668ac592c1bfb310f4390624e3dbfb75
Locale: en-US (en_US)

Also, can not confirm. Changes units for rulers from
Tools -> Options -> Writer -> View 

turning on and off the ruler
and changing the units

In all cases the Vertical rule on left edge displayed scale in rotated numbers appropriate to unit selected.

No impact when enabling or disabling OpenGL, worked either way.
Comment 3 Laurent Balland 2015-11-26 14:50:43 UTC
Make new tests on Win7 with same Version: 5.1.0.0.alpha1+
Build ID: 229583f298b9de05e1ad1727e233d597995099e3
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-22_23:09:05
Locale: fr-FR (fr_FR)

New profile: numbers are missing

Enabling/Disabling vertical with View > Rulers > Vertical Ruler or Tools -> Options -> Writer -> View has no effect: numbers are missing

Changing unit from right click or Tools -> Options -> Writer -> View has no effect: numbers are missing

Adding text, changing page, print preview have no effect: numbers are missing

Disable OpenGL, restart => numbers are there!

Portable Dell Latitude E6520
Processor: Intel Core i7-2620 CPU @2.70GHz
Graphic card: Nvidia Nvs 4200M
Comment 4 Cor Nouws 2015-11-26 16:11:51 UTC
(In reply to Laurent BP from comment #3)

> Disable OpenGL, restart => numbers are there!

Thanks - makes no difference for me, but it's a step.
Comment 5 Jacques Guilleron 2015-11-26 18:25:41 UTC
Hi all,

I reproduce with
LO 5.1.0.0.alpha1+ Build ID: f6bc5b79c31225c02e9500d0ced4bd26f998f82b
Threads 2; Ver: Windows 6.1; Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2015-11-24_01:07:47
Locale: fr-FR (fr_FR)

After disabling "Use OpenGL for all rendering" and restart LO 5.1, numbers appear on vertical ruler.

Set Status to NEW, and Keywords to regression, since this issue doesn't appear in
LO 5.0.2.2 Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale : fr-FR (fr_FR)
under Windows 7 Home,
when "Use OpenGL for all rendering" is enabled.
Comment 6 Laurent Balland 2015-11-26 21:49:51 UTC
Reproduce with:
- Version: 5.1.0.0.alpha1+
Build ID: d417059dae303685de7aa0f4b1c192ffcf5304d5-GL
TinderBox: Win-x86@39, Branch:master, Time: 2015-09-05_09:23:01
Locale: fr-FR (fr_FR)

NOT reproduce with:
- Version: 5.1.0.0.alpha1+
Build ID: fdafa5302df26df4f147b0d2efb6064389a1330c
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-08-22_23:42:26
Locale: fr-FR (fr_FR)

I noticed that, with bugous master (2015-09-05),
- enable OpenGL (Tools > Options > LibreOffice > View)
- restart
- check options (Tools > Options > LibreOffice > View)
"Use hardware acceleration" is unchecked and grayed.
With previous versions (2015-08-22), "Use hardware acceleration" is still checked and available after OpenGL activation.

With previous versions (2015-08-22), when OpenGL is activated, vertical ruler is visible but is not working (no scrolling of ruler, when scrolling page). With bugous master (2015-09-05), scrolling is working, but there is no number in ruler.

So something was fixed about OpenGL and vertical ruler between 2015-08-22 and 2015-09-05, but introduced this new bug.
Comment 7 raal 2015-11-27 16:32:52 UTC
This seems to have begun at the below commit.
Adding Cc: to Tor Lillqvist ; Could you possibly take a look at this one?
Thanks
 93f2a6c86faefa237975b8b21e5b0d00cbd319e5 is the first bad commit
commit 93f2a6c86faefa237975b8b21e5b0d00cbd319e5
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Tue Aug 25 06:29:23 2015 -0700
    source 9a68eb9c1f54d4c4e14a46c11ba9eafca35a2b82
    source 9a68eb9c1f54d4c4e14a46c11ba9eafca35a2b82

author	Tor Lillqvist <tml@collabora.com>	2015-08-25 08:52:20 (GMT)
committer	Tor Lillqvist <tml@collabora.com>	2015-08-25 08:55:40 (GMT)
commit 9a68eb9c1f54d4c4e14a46c11ba9eafca35a2b82 (patch)
Turn on glyph caching by default when using OpenGL
Comment 8 Commit Notification 2015-12-07 12:04:52 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=573cd28987614a8893f47f67f05587b7afd86546

tdf#96070: Just give up on glyph caching for non-horizontal text

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2015-12-07 12:06:44 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=caf52dbc2fa6dbfaf502b7150f13fe38e25443b9&h=libreoffice-5-1

tdf#96070: Just give up on glyph caching for non-horizontal text

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 How can I remove my account? 2015-12-07 13:56:40 UTC
For 5.0 in gerrit: https://gerrit.libreoffice.org/20436
Comment 11 Commit Notification 2015-12-09 08:03:45 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b74c0f8b750cfe89598358fba811f4900287b64&h=libreoffice-5-0

tdf#96070: Just give up on glyph caching for non-horizontal text

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-14 05:18:46 UTC Comment hidden (obsolete)
Comment 13 Björn Michaelsen 2016-04-19 14:28:25 UTC
(In reply to Commit Notification from comment #8)
> Tor Lillqvist committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=573cd28987614a8893f47f67f05587b7afd86546

Assuming this to be fixed then.
Comment 14 Laurent Balland 2016-04-19 18:04:55 UTC
With Version: 5.1.2.2 (x64)
Build ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
Threads CPU : 4; Version de l'OS :Windows 6.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR)

on Win7_x64, with same computer
Portable Dell Latitude E6520
Processor: Intel Core i7-2620 CPU @2.70GHz
Graphic card: Nvidia Nvs 4200M

OpenGL is disabled even if "Use OpenGL for all rendering" is activated and LibO restart: "Current GL status: Disabled" is indicated.

So vertical ruler is correct.

If I force OpenGL, then vertical ruler is not correct: figures are not correctly oriented. But there is also many bugs in graphics output, so openGL is not usable on my computer.
I consider this bug as fixed.