tdf#96070: Just give up on glyph caching for non-horizontal text

Change-Id: I60f54523f927e97d739a4c735e54b2cc3400aff3