vcl/win/source/gdi/winlayout.cxx
@@ -358,7 +358,8 @@ bool ImplWinFontEntry::AddChunkOfGlyphs(int nGlyphIndex, const WinLayout& rLayou
         aChunk.mbVertical = false;
     }
 
-    if (aChunk.mbVertical && aLogfont.lfEscapement != 2700)
+    // Don't even try to handle non-horizontal text
+    if (aChunk.mbVertical || aLogfont.lfEscapement != 0)
         return false;
 
     OpenGLCompatibleDC aDC(rGraphics, 0, 0, nBitmapWidth, nBitmapHeight);
